change 4 files: Archiver, ZipFileManager, EtitCommand, ConsoleHelper